major changes to make pkg work

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: iNZightTS
 Type: Package
-Title: iNZightTS
+Title: Time Series for iNZight
 Version: 0.0.2
 Date: 2013-07-15
 Authors@R: c(person("Simon", "Potter", role = c("aut", "cre"),
                     email = "spot023@aucklanduni.ac.nz"),
-             person("David", "Banks", role = "aut"))
+             person("David", "Banks", role = "aut"),
+			 person("Marco", "Kuper", role = "aut"))
 Depends: R (>= 2.13)
 Imports: grid
+LazyData: true
 Suggests: iNZight, Acinonyx
 Enhances: iNZight
 Description: Time Series functionality for iNZight
