tidied up some code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,8 @@ export(decompositionplot,
        iNZightTS)
 
 S3method("print", "iNZightTS")
-S3method("decompositionplot", "iNZightTS")
-S3method("forecastplot", "iNZightTS")
-S3method("multiseries", "iNZightTS")
+#S3method("decompositionplot", "iNZightTS")
+#S3method("forecastplot", "iNZightTS")
+#S3method("multiseries", "iNZightTS")
 S3method("seasonplot", "iNZightTS")
-S3method("rawplot", "iNZightTS")
+#S3method("rawplot", "iNZightTS")
