--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: iNZightTS
 Type: Package
 Title: Time Series for iNZight
 Version: 1.1.1
-Date: 2014-03-11
-Authors@R: c(person("Simon", "Potter", role = c("aut", "cre"),
-                    email = "spot023@aucklanduni.ac.nz"),
+Date: 2014-03-28
+Authors@R: c(person("Junjie", "Zeng", role = c("cre", "aut")),
+	     person("Simon", "Potter", role = c("aut"),
              person("David", "Banks", role = "aut"),
              person("Marco", "Kuper", role = "aut"))
 Depends: R (>= 2.13)
