--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Title: Time Series for iNZight
 Version: 1.1.1
 Date: 2014-03-28
 Authors@R: c(person("Junjie", "Zeng", role = c("cre", "aut")),
-	     person("Simon", "Potter", role = c("aut"),
+	     person("Simon", "Potter", role = "aut"),
              person("David", "Banks", role = "aut"),
              person("Marco", "Kuper", role = "aut"))
 Depends: R (>= 2.13)
