--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: iNZightTS
 Type: Package
 Title: Time Series for iNZight
-Version: 1.1.3
-Date: 2014-09-17
+Version: 1.1.4-4
+Date: 2014-12-12
 Authors@R: c(person("Junjie", "Zeng", role = c("cre", "aut"),
     email = "jzen188@aucklanduni.ac.nz"),
     person("Simon", "Potter", role = "aut"),
