--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(print,iNZightTS)
 S3method(seasonplot,forecast)
 S3method(seasonplot,iNZightTS)
+export(compareplot)
 export(decompositionplot)
 export(forecastplot)
 export(iNZightTS)
