--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: iNZightTS
 Type: Package
 Title: Time Series for iNZight
-Version: 1.1.4-4
-Date: 2014-12-12
-Authors@R: c(person("Junjie", "Zeng", role = c("cre", "aut"),
-    email = "jzen188@aucklanduni.ac.nz"),
-    person("Simon", "Potter", role = "aut"),
-    person("David", "Banks", role = "aut"),
-    person("Marco", "Kuper", role = "aut"))
+Version: 1.1.5
+Date: 2015-01-12
+Authors@R: c(person("Tom", "Elliott", role = c("aut", "cre"),
+    email = "tell029@aucklanduni.ac.nz"),
+    person("Junjie", "Zeng",   role = "aut"),
+    person("Simon", "Potter",  role = "aut"),
+    person("David", "Banks",   role = "aut"),
+    person("Marco", "Kuper",   role = "aut"))
 Depends:
     R (>= 2.13)
 Imports:
