--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,iNZightTS)
 S3method(seasonplot,forecast)
 S3method(seasonplot,iNZightTS)
 export(compareplot)
+export(decomposition)
 export(decompositionplot)
 export(forecastplot)
 export(iNZightTS)
