--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,6 @@ export(multiseries)
 export(multiseries.1)
 export(multiseries.2p)
 export(rawplot)
+export(recompose)
 export(seasonplot)
 import(grid)
