--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Depends:
 Imports:
     grid
 Suggests:
-    iNZight,
+    iNZight, iNZightTools,
     Acinonyx
 Description: Time Series functionality for iNZight
 License: GPL-2
