--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: iNZightTS
 Type: Package
 Title: Time Series for iNZight
-Version: 1.2
+Version: 1.2-900
 Date: 2017-03-23
 Authors@R: c(person("Tom", "Elliott", role = c("aut", "cre"),
-                    email = "tell029@aucklanduni.ac.nz"),
+                    email = "tom.elliott@auckland.ac.nz"),
              person("Junjie", "Zeng",    role = "aut"),
              person("Simon", "Potter",   role = "aut"),
              person("David", "Banks",    role = "aut"),
@@ -13,10 +13,11 @@ Authors@R: c(person("Tom", "Elliott", role = c("aut", "cre"),
 Depends:
     R (>= 2.13)
 Imports:
-    grid
-Suggests:
-    iNZight, iNZightTools,
-    Acinonyx
-Description: Time Series functionality for iNZight
+    grid,
+	grDevices,
+	graphics,
+	stats,
+	utils
+Description: Time Series functionality for iNZight, allowing users to draw, decompose, and forcast with ease.
 License: GPL-2
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
