--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,5 @@ Suggests:
     iNZight, iNZightTools,
     Acinonyx
 Description: Time Series functionality for iNZight
-License: GPL-2
+License: GPL-3 | file LICENSE
 RoxygenNote: 5.0.1
