--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,11 @@ Imports:
     grDevices,
     graphics,
     stats,
-    utils
+    utils,
+    ggplot2,
+    tidyr,
+    dplyr,
+    magrittr
 Description: Time Series functionality for iNZight, allowing users to draw, decompose, and forcast with ease.
 License: GPL-2 | file LICENSE
 RoxygenNote: 6.0.1
