--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,13 @@ export(iNZightTS)
 export(multiseries)
 export(multiseries.1)
 export(multiseries.2p)
+export(rawplot)
 export(recompose)
 export(seasonplot)
+import(ggplot2)
 import(grDevices)
 import(graphics)
 import(grid)
 import(stats)
 import(utils)
+importFrom(magrittr,'%>%')
