--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: iNZightTS
 Type: Package
 Title: Time Series for iNZight
-Version: 1.3-1
-Date: 2017-10-20
+Version: 1.4
+Date: 2018-01-18
 Authors@R: c(person("Tom", "Elliott", role = c("aut", "cre"),
                     email = "tom.elliott@auckland.ac.nz"),
              person("Junjie", "Zeng",    role = "aut"),
@@ -14,6 +14,7 @@ Depends:
     R (>= 2.13)
 Imports:
     grid,
+    gridExtra,
     grDevices,
     graphics,
     stats,
@@ -21,6 +22,7 @@ Imports:
     ggplot2,
     tidyr,
     dplyr,
+    forcats,
     magrittr
 Description: Time Series functionality for iNZight, allowing users to draw, decompose, and forcast with ease.
 License: GPL-2 | file LICENSE
