Add osx to travis-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,23 @@ language: R
 sudo: false
 cache: packages
 latex: false
+pandoc: false
 
-r:
-  - oldrel
-  - release
-  - devel
+matrix:
+  include:
+    - os: linux
+      r: oldrel
+    - os: linux
+      r: release
+    - os: linux
+      r: devel
+    - os: osx
+      r: 3.3
+      brew_packages: libgit2
 
 repos:
-  docker: http://r.docker.stat.auckland.ac.nz/R
+  docker: https://r.docker.stat.auckland.ac.nz
+  rforge: https://r-forge.r-project.org/
+
+before_install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo chown -R $(whoami) /usr/local/share; fi
