Add tests for existing plots before modifying code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,3 +27,5 @@ Imports:
 Description: Time Series functionality for iNZight, allowing users to draw, decompose, and forcast with ease.
 License: GPL-2 | file LICENSE
 RoxygenNote: 6.1.1
+Suggests: 
+    testthat
