Use oldrel/release R on macos

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,12 @@ matrix:
     - os: linux
       r: devel
     - os: osx
-      r: 3.3
+      r: oldrelease
       brew_packages: libgit2
+    - os: osx
+      r: release
+      brew_packages: libgit2
+
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo chown -R $(whoami) /usr/local/share; fi
