--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
     - os: linux
       r: devel
     - os: osx
-      r: oldrelease
+      r: oldrel
       brew_packages: libgit2
     - os: osx
       r: release
