Xlim on raw plots (and multiplot/compare plot) (#16) - Also add tests (#15)

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,6 @@ matrix:
 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then sudo chown -R $(whoami) /usr/local/share; fi
+
+after_success:
+  - Rscript -e 'covr::codecov()'
