--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,4 +28,5 @@ Description: Time Series functionality for iNZight, allowing users to draw, deco
 License: GPL-2 | file LICENSE
 RoxygenNote: 6.1.1
 Suggests: 
-    testthat
+    testthat,
+    covr
