--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,10 @@ Imports:
     dplyr,
     forcats,
     magrittr
+Suggests:
+    iNZightPlots,
+    testthat,
+    covr
 Description: Time Series functionality for iNZight, allowing users to draw, decompose, and forcast with ease.
 License: GPL-2 | file LICENSE
 RoxygenNote: 6.1.1
-Suggests: 
-    testthat,
-    covr
