Install dev inzighttools too

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ matrix:
       brew_packages: libgit2
 
 r_github_packages:
+  - iNZightVIT/iNZightTools@dev
   - iNZightVIT/iNZightPlots@dev
 
 before_install:
