--- a/appveyor.yml
+++ b/appveyor.yml
@@ -26,6 +26,7 @@ environment:
 
 build_script:
   - travis-tool.sh install_deps
+  - travis-tool.sh install_github iNZightVIT/iNZightTools@dev
   - travis-tool.sh install_github iNZightVIT/iNZightPlots@dev
 
 test_script:
