--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(decompositionplot)
 export(forecastplot)
 export(iNZightTS)
 export(multiseries)
+export(pred)
 export(rawplot)
 export(recompose)
 export(seasonplot)
