--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,4 +30,5 @@ Suggests:
 Description: Time Series functionality for iNZight, allowing users to draw, decompose, and forcast with ease.
 LazyData: true
 License: GPL-2 | file LICENSE
+Encoding: UTF-8
 RoxygenNote: 6.1.1
