Create ggplot version of season plot.
Also,
- close #13
- fix up some tidyverse NSE stuff (using rlang::.data)
- remove deprecated forecastplot code

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,9 @@ Imports:
     tidyr,
     dplyr,
     forcats,
-    magrittr
+    magrittr,
+    egg,
+    rlang
 Suggests:
     iNZightPlots,
     testthat,
