--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(plot,iNZightMTS)
 S3method(plot,iNZightTS)
 S3method(print,iNZightTS)
-S3method(seasonplot,forecast)
 S3method(seasonplot,iNZightTS)
 export(compareplot)
 export(decompositionplot)
@@ -21,3 +20,4 @@ import(grid)
 import(stats)
 import(utils)
 importFrom(magrittr,'%>%')
+importFrom(rlang,.data)
