--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,iNZightTS)
 S3method(print,iNZightTS)
 S3method(seasonplot,iNZightTS)
 export(compareplot)
+export(decompose)
 export(decompositionplot)
 export(forecastplot)
 export(iNZightTS)
