--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,12 @@ Suggests:
     iNZightPlots,
     testthat,
     covr
-Description: Time Series functionality for iNZight, allowing users to draw, decompose, and forcast with ease.
+Description: Time Series functionality for iNZight, allowing users to draw,
+    decompose, and forcast with ease. Includes capabilities to compare multiple series
+    and fit both additive and multiplicative models.
+BugReports: https://github.com/iNZightVIT/iNZightTS/issues
+Contact: inzight_support@stat.auckland.ac.nz
+URL: https://www.stat.auckland.ac.nz/~wild/iNZight/
 LazyData: true
 License: GPL-2 | file LICENSE
 Encoding: UTF-8
