Add colours to subtitle of decomp plot

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,10 @@ Imports:
     forcats,
     magrittr,
     egg,
-    rlang
+    rlang,
+    ggtext,
+    glue,
+    colorspace
 Suggests:
     testthat,
     covr
@@ -38,4 +41,4 @@ LazyData: true
 License: GPL-3
 Encoding: UTF-8
 Language: en-GB
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
