--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,10 @@ Title: Time Series for 'iNZight'
 Version: 1.5.7.9000
 Authors@R: c(
     person("Tom", "Elliott", role = c("aut", "cre"), email = "tom.elliott@auckland.ac.nz", comment = c(ORCID = "0000-0002-7815-6318")),
-    person("Junjie", "Zeng",    role = "aut"),
+    person("Junjie", "Zeng",    role = "ctb"),
     person("Simon", "Potter",   role = "aut"),
     person("David", "Banks",    role = "aut"),
-    person("Marco", "Kuper",    role = "aut"),
+    person("Marco", "Kuper",    role = "ctb"),
     person("Dongning", "Zhang", role = "ctb")
     )
 Depends:
