--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,iNZightMTS)
 S3method(plot,iNZightTS)
 S3method(plot,inzdecomp)
+S3method(plot,inzightts)
 S3method(print,iNZightTS)
 S3method(seasonplot,iNZightTS)
 export(compareplot)
@@ -10,6 +11,7 @@ export(decompose)
 export(decompositionplot)
 export(forecastplot)
 export(iNZightTS)
+export(inzightts)
 export(multiseries)
 export(pred)
 export(rawplot)
