--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,8 @@
 S3method(.decomp,use_stl)
 S3method(plot,iNZightMTS)
 S3method(plot,iNZightTS)
+S3method(plot,inz_ts)
 S3method(plot,inzdecomp)
-S3method(plot,inzightts)
 S3method(print,iNZightTS)
 S3method(seasonplot,iNZightTS)
 export(.decomp)
