--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(plot,iNZightMTS)
 S3method(plot,iNZightTS)
 S3method(plot,inz_ts)
 S3method(plot,inzdecomp)
+S3method(predict,inz_ts)
 S3method(print,iNZightTS)
 S3method(seasonplot,iNZightTS)
 export(.decomp)
