univariate plot method for inz_frct

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(.decomp,use_stl)
 S3method(plot,iNZightMTS)
 S3method(plot,iNZightTS)
+S3method(plot,inz_frct)
 S3method(plot,inz_ts)
 S3method(plot,inzdecomp)
 S3method(predict,inz_ts)
@@ -10,6 +11,7 @@ S3method(print,iNZightTS)
 S3method(seasonplot,iNZightTS)
 export(.decomp)
 export(compareplot)
+export(decomp)
 export(decompose)
 export(decompositionplot)
 export(forecastplot)
