--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ S3method(plot,inz_dcmp)
 S3method(plot,inz_frct)
 S3method(plot,inz_ts)
 S3method(plot,inzdecomp)
+S3method(plot,seas_ts)
 S3method(predict,inz_ts)
 S3method(print,iNZightTS)
 S3method(seasonplot,iNZightTS)
+S3method(seasonplot,inz_ts)
 export(.decomp)
 export(compareplot)
 export(decomp)
