summary method for prediction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ S3method(plot,inz_frct)
 S3method(plot,inz_ts)
 S3method(plot,seas_ts)
 S3method(predict,inz_ts)
+S3method(print,summary_inz_frct)
 S3method(seasonplot,inz_ts)
+S3method(summary,inz_frct)
 export(.decomp)
 export(decomp)
 export(inzightts)
