--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(.decomp,use_stl)
 S3method(inzightts,character)
 S3method(inzightts,data.frame)
+S3method(inzightts,tbl_ts)
 S3method(inzightts,ts)
 S3method(plot,inz_dcmp)
 S3method(plot,inz_frct)
