--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(decomp)
 export(inzightts)
 export(log_if)
 export(seasonplot)
+export(subseries)
 import(ggplot2)
 import(grDevices)
 import(graphics)
