--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,6 @@ import(grid)
 import(patchwork)
 import(stats)
 import(utils)
-importFrom(magrittr,'%>%')
+importFrom(dplyr,'%>%')
 importFrom(rlang,':=')
 importFrom(rlang,.data)
