check if plot can be passed to plotly::ggplotly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(seasonplot,inz_ts)
 S3method(summary,inz_frct)
 export(.decomp)
 export(decomp)
+export(ggplotable)
 export(inzightts)
 export(log_if)
 export(seasonplot)
