--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: iNZightTS
+Package: iNZightTS2
 Type: Package
 Title: Time Series for 'iNZight'
 Version: 2.0.0
@@ -41,11 +41,11 @@ Suggests:
     covr,
     testthat
 Description: Provides a collection of functions for working with time series data, including functions for drawing, decomposing, and forecasting. Includes capabilities to compare multiple series and fit both additive and multiplicative models. Used by 'iNZight', a graphical user interface providing easy exploration and visualisation of data for students of statistics, available in both desktop and online versions. Holt (1957) <doi:10.1016/j.ijforecast.2003.09.015>, Winters (1960) <doi:10.1287/mnsc.6.3.324>, Cleveland, Cleveland, & Terpenning (1990) "STL: A Seasonal-Trend Decomposition Procedure Based on Loess".
-BugReports: https://github.com/iNZightVIT/iNZightTS/issues
+BugReports: https://github.com/iNZightVIT/iNZightTS2/issues
 Contact: inzight_support@stat.auckland.ac.nz
 URL: http://inzight.nz
 LazyData: true
 License: GPL-3
 Encoding: UTF-8
 Language: en-GB
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
