--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: iNZightTS
+Package: iNZightTSLegacy
 Type: Package
-Title: Time Series for 'iNZight'
+Title: (Legacy Version) Time Series for 'iNZight'
 Version: 1.5.10
 Authors@R: c(
     person("Tom", "Elliott", role = c("aut", "cre"), email = "tom.elliott@auckland.ac.nz", comment = c(ORCID = "0000-0002-7815-6318")),
