--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,12 @@ S3method(plot,inz_frct)
 S3method(plot,inz_ts)
 S3method(plot,seas_ts)
 S3method(predict,inz_ts)
+S3method(print,inzts_fit)
 S3method(print,summary_inz_frct)
 S3method(seasonplot,inz_ts)
 S3method(summary,inz_frct)
 export(decomp)
+export(fit_model)
 export(ggplotable)
 export(inzightts)
 export(log_if)
