--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(inzightts,ts)
 S3method(plot,inz_dcmp)
 S3method(plot,inz_frct)
 S3method(plot,inz_ts)
+S3method(plot,inzts_fit)
 S3method(plot,seas_ts)
 S3method(predict,inz_ts)
 S3method(print,inzts_fit)
