--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
 pandoc: 2.9.2.1
-pkgdown: 2.0.7
+pkgdown: 2.0.9
 pkgdown_sha: ~
-articles: {}
-last_built: 2023-07-30T23:39Z
+articles:
+  model-checking: model-checking.html
+last_built: 2024-05-24T04:01Z
 urls:
   reference: https://inzightvit.github.io/iNZightTS/reference
   article: https://inzightvit.github.io/iNZightTS/articles
