--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,26 +17,27 @@ Imports:
     cli,
     colorspace,
     dplyr (>= 1.1.0),
+    evaluate,
+    fable,
+    fabletools,
+    feasts,
     forcats,
+    fpp3,
     ggplot2,
     ggtext,
     glue,
     graphics,
     grDevices,
     grid,
+    lubridate,
     patchwork,
     rlang,
     stats,
-    tidyr,
-    utils,
-    tsibble,
-    fable,
-    fabletools,
-    feasts,
-    evaluate,
-    lubridate,
-    stringr,
     tibble,
+    tidyr,
+    tsibble,
+    utils,
+    stringr,
     urca
 Suggests:
     covr,
