--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(plot,surrogate)
 S3method(predict,inz_ts)
 S3method(print,inzts_fit)
 S3method(print,summary_inz_frct)
+S3method(print,surrogate)
 S3method(seasonplot,inz_ts)
 S3method(summary,inz_frct)
 export(check)
@@ -27,7 +28,6 @@ export(decomp)
 export(fit_model)
 export(ggplotable)
 export(inzightts)
-export(log_if)
 export(seasonplot)
 export(subseries)
 export(surrogate.test)
