--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,9 @@ S3method(as_year,Date)
 S3method(as_year,character)
 S3method(as_year,numeric)
 S3method(as_year,vctrs_vctr)
+S3method(check,inz_ts)
+S3method(check,inzts_chk_fit)
+S3method(check,inzts_fit)
 S3method(get_model,"function")
 S3method(get_model,character)
 S3method(inzightts,character)
@@ -16,11 +19,12 @@ S3method(plot,inz_frct)
 S3method(plot,inz_ts)
 S3method(plot,inzts_fit)
 S3method(plot,seas_ts)
-S3method(plot,surrogate)
+S3method(plot,srgt_indep)
 S3method(predict,inz_ts)
+S3method(print,chk_input)
 S3method(print,inzts_fit)
+S3method(print,srgt_indep)
 S3method(print,summary_inz_frct)
-S3method(print,surrogate)
 S3method(seasonplot,inz_ts)
 S3method(summary,inz_frct)
 export(check)
@@ -28,9 +32,10 @@ export(decomp)
 export(fit_model)
 export(ggplotable)
 export(inzightts)
+export(log_if)
 export(seasonplot)
 export(subseries)
-export(surrogate.test)
+export(surrogate_independence)
 import(ggplot2)
 import(grDevices)
 import(graphics)
