--- a/.github/workflows/R-CMD-CHECK.yaml
+++ b/.github/workflows/R-CMD-CHECK.yaml
@@ -17,7 +17,7 @@ jobs:
           - { os: macOS-latest, r: "release" }
           # - {os: macOS-latest, r: 'devel'}
           - {
-              os: ubuntu-20.04,
+              os: ubuntu-latest,
               r: "release",
               rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest",
             }
