--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,3 +49,9 @@ License: GPL-3
 Encoding: UTF-8
 Language: en-GB
 RoxygenNote: 7.3.2
+Config/testthat/edition: 3
+Config/Needs/dependencies:
+    rcmdcheck,
+    curl
+Config/Needs/coverage:
+    covr
