--- a/.github/workflows/R-CMD-CHECK.yaml
+++ b/.github/workflows/R-CMD-CHECK.yaml
@@ -51,6 +51,6 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -yh --reinstall libicu66
+          sudo apt-get install -y --reinstall libicu66
 
       - uses: r-lib/actions/check-r-package@v2
