--- a/.github/workflows/R-CMD-CHECK.yaml
+++ b/.github/workflows/R-CMD-CHECK.yaml
@@ -16,15 +16,9 @@ jobs:
           - { os: windows-latest, r: "devel" }
           - { os: macOS-latest, r: "release" }
           # - {os: macOS-latest, r: 'devel'}
-          - {
-              os: ubuntu-latest,
-              r: "release",
-              rspm: "https://packagemanager.rstudio.com/cran/__linux__/focal/latest",
-            }
+          - { os: ubuntu-latest, r: "release" }
 
     env:
-      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-      RSPM: ${{ matrix.config.rspm }}
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     concurrency:
